# 90-deg-rotator

./: .gitignore  CHANGELOG.md  LLM.md  PROJECT_INFO.md  README.md  base-config.yaml  config-example.yaml  deploy.py  maubot-api.py  maubot-dev.py  maubot.yaml  maubot_helper.py  pyproject.toml  requirements-dev.txt  requirements.txt  status.py
ImageRotator/: __init__.py
NinetyDegreeRotator/: __init__.py
builds/: dev.tionis.maubot.NinetyDegreeRotator-v0.2.0.mbp
tests/: __init__.py  test_decryption.py  test_matrix_encryption.py  test_plugin.py  test_simple.py
